<resources>
    <string name="app_name">STUDENTMGR</string>
    <string name="title">Student Management</string>
    <string name="abs">Wellcome to this application</string>
    <string name="id">学号</string>
    <string name="name">姓名</string>
    <string name="sex">请选择你的性别</string>
    <string name="college">请选择你的学院</string>
    <string name="loginTitle">学生管理系统登录界面</string>
    <string name="action_flash">刷新</string>
    <string name="action_insert">添加</string>
    <string name="action_find">查找</string>
    <string name="action_findPhonePlace">查询手机归属地</string>
    <string name="action_config">设置</string>
    <string-array name="collegeArray">
        <item>计算机学院</item>
        <item>汽车学院</item>
        <item>电气学院</item>
    </string-array>
    <string-array name="fontSize">
        <item>小</item>
        <item>中</item>
        <item>大</item>
    </string-array>
</resources>
