<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_find"
        android:icon="@drawable/search"
        android:title="@string/action_find"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_flash"
        android:title="@string/action_flash" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_insert"
        android:title="@string/action_insert" />
    <item
        android:id="@+id/action_findPhonePlace"
        android:title="@string/action_findPhonePlace" />
    <item
        android:id="@+id/action_config"
        android:title="@string/action_config" />
</menu>